--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -35,7 +35,7 @@ jobs:
           context: php/.
           platform: linux/arm64,linux/amd64
           dockerHubUser: ${{ github.actor }}
-          dockerHubPassword: ${{ secrets.GITHUB_TOKEN }}
+          dockerHubPassword: ${{ secrets.TOKEN }}
 #       - name: get changed files
 #         id: getfile
 #         run: |
