--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -38,8 +38,8 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: "bskiefer"
-          password: ${{ secrets.TOKEN }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Run Buildx
         run: |
@@ -47,5 +47,5 @@ jobs:
             -f php/${{ matrix.PHP }}/Dockerfile \
             php/. \
             --platform linux/amd64,linux/arm64 \
-            --push --tag brandonkiefer/php-dev:${{ matrix.PHP }}
+            --push --tag ghcr.io/phpdocdev/php:${{ matrix.PHP }}
           
