--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        PHP: [54]
+        TAGS: ["apache", "bind", "mailhog", 54, 56, 72, 74, 81]
     outputs:
       matrix: ${{ steps.getfile.outputs.files }}
     steps:
@@ -44,8 +44,8 @@ jobs:
         name: Run Buildx
         run: |
           docker buildx build \
-            -f php/${{ matrix.PHP }}/Dockerfile \
+            -f php/${{ matrix.TAGS }}/Dockerfile \
             php/. \
             --platform linux/amd64,linux/arm64 \
-            --push --tag ghcr.io/phpdocdev/php:${{ matrix.PHP }}
+            --push --tag ghcr.io/phpdocdev/php:${{ matrix.TAGS }}
           
