--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        TAGS: ["apache", "bind", "mailhog", 54, 56, 72, 74, 81]
+        TAGS: [54, 56, 72, 74, 81]
     outputs:
       matrix: ${{ steps.getfile.outputs.files }}
     steps:
@@ -48,4 +48,39 @@ jobs:
             php/. \
             --platform linux/amd64,linux/arm64 \
             --push --tag ghcr.io/phpdocdev/php:${{ matrix.TAGS }}
+  other:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        TAGS: ["apache", "bind", "mailhog"]
+    outputs:
+      matrix: ${{ steps.getfile.outputs.files }}
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up Docker Buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v3
+        with:
+          buildx-version: latest
+          qemu-version: latest
+      -
+        name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
+        name: Run Buildx
+        run: |
+          docker buildx build \
+            -f ${{ matrix.TAGS }}/Dockerfile \
+            php/. \
+            --platform linux/amd64,linux/arm64 \
+            --push --tag ghcr.io/phpdocdev/${{ matrix.TAGS }}
           
