--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -80,7 +80,7 @@ jobs:
         run: |
           docker buildx build \
             -f ${{ matrix.TAGS }}/Dockerfile \
-            php/. \
+            {{ matrix.TAGS }}/. \
             --platform linux/amd64,linux/arm64 \
             --push --tag ghcr.io/phpdocdev/${{ matrix.TAGS }}
           
