--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -62,6 +62,15 @@ jobs:
         name: Available platforms
         run: echo ${{ steps.buildx.outputs.changed_files }}
       -
+        name: Available platforms
+        run: echo ${{ steps.filter.outputs.changed }}
+      -
+        name: Available platforms
+        run: echo ${{ steps.filter.outputs.php }}
+      -
+        name: Available platforms
+        run: echo ${{ steps.filter.outputs.php_files }}
+      -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
