--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -79,18 +79,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       -
-        name: Set selected color
-        run: echo ${{steps.filter.outputs.changed_files}}
-#       -
-#         name: Run Buildx
-# #         if: ${{ steps.filter.outputs.php == 'true' }}
-#         if: contains(fromJSON(steps.filter.outputs.changes), ${{ matrix.TAGS }})
-#         run: |
-#           docker buildx build \
-#             -f php/${{ matrix.TAGS }}/Dockerfile \
-#             php/. \
-#             --platform linux/amd64,linux/arm64 \
-#             --push --tag ghcr.io/phpdocdev/php:${{ matrix.TAGS }}
+        name: Run Buildx
+#         if: ${{ steps.filter.outputs.php == 'true' }}
+        if: contains(fromJSON(steps.filter.outputs.php_files), "php/${{ matrix.TAGS }}/Dockerfile")
+        run: |
+          docker buildx build \
+            -f php/${{ matrix.TAGS }}/Dockerfile \
+            php/. \
+            --platform linux/amd64,linux/arm64 \
+            --push --tag ghcr.io/phpdocdev/php:${{ matrix.TAGS }}
   other:
     runs-on: ubuntu-latest
     strategy:
