--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -46,7 +46,7 @@ jobs:
       - uses: dorny/paths-filter@v2
         id: filter
         with:
-          list-files: json
+#           list-files: json
           filters: |
             php:
               - 'php/**/Dockerfile'
@@ -62,15 +62,17 @@ jobs:
       -
         name: Available platforms
         run: echo ${{ steps.buildx.outputs.changed_files }}
-#       -
-#         name: Available platforms
-#         run: echo contains(steps.filter.outputs.php_files, 'php/${{ matrix.TAGS }}/Dockerfile')
+      -
+        name: Available platforms
+        run: echo ${{ toJSON(steps.filter.outputs.php_files) }}
+      -
+        name: Available platformss
+        run: echo contains(steps.filter.outputs.php_files, 'php/${{ matrix.TAGS }}/Dockerfile')
       -
         name: Available platforms
         run: echo ${{ steps.filter.outputs.php }}
       -
-        name: Available platforms
-        run: echo ${{ steps.filter.outputs.php_files }}
+        run: exit 1
       -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v1
