--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -61,7 +61,7 @@ jobs:
           qemu-version: latest
       -
         name: Available platforms
-        run: echo ${{ steps.buildx.outputs.changed_files }}
+        run: echo ${{contains(steps.filter.outputs.php_files, 'php/${{ matrix.TAGS }}/Dockerfile')}}
       -
         name: Available platforms
         run: echo ${{ toJSON(steps.filter.outputs.php_files) }}
@@ -71,8 +71,6 @@ jobs:
       -
         if: ${{ steps.filter.outputs.php }} && ${{contains(steps.filter.outputs.php_files, 'php/${{ matrix.TAGS }}/Dockerfile')}}
         run: exit 1
-      -
-        run: exit 0
       -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v1
