--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -74,9 +74,6 @@ jobs:
         run: |
           echo php/${{ matrix.TAGS }}/Dockerfile
       -
-        if: steps.filter.outputs.php && contains(steps.filter.outputs.php_files, format('php/{0}/Dockerfile', matrix.TAGS))
-        run: exit 1
-      -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
@@ -85,8 +82,9 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Run Buildx
+        if: steps.filter.outputs.php && contains(steps.filter.outputs.php_files, format('php/{0}/Dockerfile', matrix.TAGS))
 #         if: ${{ steps.filter.outputs.php == 'true' }}
-        if: contains(steps.filter.outputs.php_files, 'php/${{ matrix.TAGS }}/Dockerfile')
+#         if: contains(steps.filter.outputs.php_files, 'php/${{ matrix.TAGS }}/Dockerfile')
         run: |
           docker buildx build \
             -f php/${{ matrix.TAGS }}/Dockerfile \
