--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -23,10 +23,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 100
-      - uses: YassinEldeeb/has-changed-path@v2.1
-        id: changed-paths
-        with:
-          paths: .github php
       - uses: dorny/paths-filter@v2
         id: filter
         with:
@@ -63,11 +59,15 @@ jobs:
         with:
           buildx-version: latest
           qemu-version: latest
+      
+      - uses: YassinEldeeb/has-changed-path@v2.1
+        id: changed-paths
+        with:
+          paths: format('php/{0}', matrix.TAGS)
       -
         name: Changed path
         run: |
-          echo ${{fromJSON(needs.changes.outputs.changed) }}
-          echo ${{fromJSON(needs.changes.changed-paths)}}
+          echo ${{ steps.changed-paths.outputs.changed }}
       -
         name: Available platforms
         run: exit 1
