--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -63,7 +63,7 @@ jobs:
       - uses: YassinEldeeb/has-changed-path@v2.1
         id: changed-paths
         with:
-          paths: format('php/{0}', matrix.TAGS)
+          paths: ${{format('php/{0}', matrix.TAGS)}}
       -
         name: Changed path
         run: |
