--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,9 +1,6 @@
 
 name: publishmultipledockerimage
-# on:
-#   push:
-#     paths:
-#       - 'php/**/Dockerfile'
+
 on:
   push:
     branches: ['master']
@@ -13,94 +10,38 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  changes:
-    runs-on: ubuntu-latest
-    outputs:
-      changed_other: ${{ steps.filter.outputs.other_files }}
-      changed_php: ${{ steps.filter.outputs.php_files }}
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 100
-      - uses: dorny/paths-filter@v2
-        id: filter
-        with:
-          list-files: json
-          filters: |
-            php:
-              - 'php/**'
-            other:
-              - '**'
-            all:
-              - '**'
   setup:
-    needs: changes
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        TAGS: [54, 56, 72, 74, 81]
     steps:
       - name: checkout
         uses: actions/checkout@v3
-#       - uses: dorny/paths-filter@v2
-#         id: filter
-#         with:
-#           list-files: json
-#           filters: |
-#             php:
-#               - 'php/**/Dockerfile'
-#             changed:
-#               - '**'
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v3
         with:
           buildx-version: latest
           qemu-version: latest
-      
-      - uses: marceloprado/has-changed-path@v1
-        id: changed-paths
-        with:
-          paths: ${{format('php/{0}', matrix.TAGS)}}
-          
-      - uses: dorny/paths-filter@v2
-        id: filters
-        with:
-          filters: |
-            changed:
-              - ${{format('php/{0}/**', matrix.TAGS)}}
-      -
-        name: Changed path
-        run: |
-          echo ${{ steps.filters.outputs.changed }}
-      -
-        name: Available platforms
-        run: exit 1
-#       -
-#         name: Available platforms
-#         run: echo ${{contains(fromJSON(steps.filter.outputs.changed_files), '.github/workflows/docker-publish.yml')}}
-#       -
-#         name: Get path
-#         if: steps.filter.outputs.php
-#         run: |
-#           echo php/${{ matrix.TAGS }}/Dockerfile
-#       -
-#         name: Get path2
-#         if: steps.filter.outputs.php
-#         run: |
-#           echo ${{format('php/{0}/Dockerfile', matrix.TAGS)}}
-      -
-        name: Login to GitHub Container Registry
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Run Buildx
-        if: contains(fromJSON(needs.changes.outputs.changed_php), format('php/{0}', matrix.TAGS))
+  php:
+    needs: setup
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        TAGS: [54, 56, 72, 74, 81]
+    steps:
+      - uses: dorny/paths-filter@v2
+        id: filter
+        with:
+          filters: |
+            changed:
+              - ${{format('php/{0}/**', matrix.TAGS)}}
+      - name: Run Buildx
+        if: steps.filter.outputs.changed
         run: |
           docker buildx build \
             -f php/${{ matrix.TAGS }}/Dockerfile \
@@ -109,32 +50,21 @@ jobs:
             --push --tag ghcr.io/phpdocdev/php:${{ matrix.TAGS }}
   other:
     runs-on: ubuntu-latest
-    needs: changes
+    needs: setup
     strategy:
       matrix:
         TAGS: ["apache", "bind", "mailhog"]
     outputs:
       matrix: ${{ steps.getfile.outputs.files }}
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
-      -
-        name: Set up Docker Buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v3
+      - uses: dorny/paths-filter@v2
+        id: filter
         with:
-          buildx-version: latest
-          qemu-version: latest
-      -
-        name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Run Buildx
-        if: contains(fromJSON(needs.changes.outputs.changed_other), format('{0}', matrix.TAGS))
+          filters: |
+            changed:
+              - ${{format('php/{0}/**', matrix.TAGS)}}
+      - name: Run Buildx
+        if: steps.filter.outputs.changed
         run: |
           docker buildx build \
             -f ${{ matrix.TAGS }}/Dockerfile \
