--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,9 +10,17 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  setup:
+#   setup:
+#     runs-on: ubuntu-latest
+#     steps:
+      
+  php:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        TAGS: [54, 56, 72, 74, 81]
     steps:
+      - uses: actions/checkout@v3
       - name: Set up Docker Buildx
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v3
@@ -25,14 +33,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-  php:
-    needs: setup
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        TAGS: [54, 56, 72, 74, 81]
-    steps:
-      - uses: actions/checkout@v3
       - uses: dorny/paths-filter@v2
         id: filter
         with:
@@ -49,7 +49,7 @@ jobs:
             --push --tag ghcr.io/phpdocdev/php:${{ matrix.TAGS }}
   other:
     runs-on: ubuntu-latest
-    needs: setup
+#     needs: setup
     strategy:
       matrix:
         TAGS: ["apache", "bind", "mailhog"]
@@ -57,6 +57,18 @@ jobs:
       matrix: ${{ steps.getfile.outputs.files }}
     steps:
       - uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v3
+        with:
+          buildx-version: latest
+          qemu-version: latest
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - uses: dorny/paths-filter@v2
         id: filter
         with:
